# pbmm2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bamboo_build.sh  m_to_eqx.diff  meson.build  meson_options.txt  pbmm2.cmake  pbmm2.cpp
cmake/: pbmm2-compilerflags.cmake  pbmm2-dependencies.cmake  pbmm2-releasewithassert.cmake
include/: meson.build
include/pacbio/minimap2/: Index.h  Mapping.h  ThreadBuffer.h
include/pbmm2/: AlignmentMode.h  LibraryInfo.h  MM2Helper.h  MM2Settings.h  Pbmm2Version.h
scripts/: cram
scripts/ci/: build.sh  install.sh  setup.sh  test.sh
scripts/r/: counts_lowplex.R  report_detail.R  report_summary.R
src/: AbortException.h  AlignSettings.cpp  AlignSettings.h  AlignWorkflow.cpp  AlignWorkflow.h  AlignmentMode.h  BamIndex.h  CMakeLists.txt  Index.h  IndexSettings.cpp  IndexSettings.h  IndexWorkflow.cpp  IndexWorkflow.h  InputOutputUX.cpp  InputOutputUX.h  LibraryGitHash.h.in  LibraryInfo.cpp  LibraryVersion.h.in  MM2Helper.cpp  MM2Helper.h  MM2Settings.h  Mapping.h  Pbmm2GitHash.cpp.in  Pbmm2GlobalVersion.cpp  Pbmm2GlobalVersion.h  Pbmm2Version.cpp.in  Pbmm2Version.h  PlainOption.h  SampleNames.cpp  SampleNames.h  Settings.cpp  Settings.h  StreamWriters.cpp  StreamWriters.h  ThreadBuffer.h  Timer.cpp  Timer.h  WorkQueue.h  Workflow.cpp  Workflow.h  (+4 more)
subprojects/: htslib.wrap  minimap2.wrap  pbbam.wrap  pbcopper.wrap  pbtestutils.wrap
tests/: meson.build
tests/cram/: baminput.t  baminput_1.t  baminput_10.t  baminput_11.t  baminput_12.t  baminput_13.t  baminput_14.t  baminput_15.t  baminput_16.t  baminput_17.t  baminput_18.t  baminput_19.t  baminput_2.t  baminput_20.t  baminput_21.t  baminput_22.t  baminput_23.t  baminput_24.t  baminput_25.t  baminput_26.t  baminput_27.t  baminput_28.t  baminput_29.t  baminput_3.t  baminput_30.t  baminput_4.t  baminput_5.t  baminput_6.t  baminput_7.t  baminput_8.t  baminput_9.t  best_n.t  biosampleConsensus.t  biosampleConsensus_1.t  biosampleConsensus_10.t  biosampleConsensus_2.t  biosampleConsensus_3.t  biosampleConsensus_4.t  biosampleConsensus_5.t  biosampleConsensus_6.t  (+83 more)
tests/cram/data/: REF_58919191.fasta  bnd-ref.fasta  bnd.bam  bnd.fasta  demultiplex.bc1009--bc1009.bam  demultiplex.bc1009--bc1009.bam.bai  demultiplex.bc1009--bc1009.bam.pbi  demultiplex.bc1009--bc1009.consensusreadset.xml  demultiplex.bc1009--bc1009.ref.fasta  ecoli.referenceset.xml  enforced_mapping-expected.csv  enforced_mapping-read_to_contig.csv  enforced_mapping-reads.fasta  enforced_mapping-ref.fasta  human_ecoli.fasta  inv.fasta  lambdaNEB_BsaAI_allFrags_incLeftRightEnds_unrolled_250k.fasta  m54019_171011_032401_tiny.scraps.bam  m54019_171011_032401_tiny.scraps.bam.pbi  m54019_171011_032401_tiny.subreads.bam.pbi  m54019_171011_032401_tiny.subreadset.xml  m54075_180905_221350.ccs.bam  m54075_180905_221350.ccs.bam.pbi  m54075_180905_221350.consensusreadset.xml  m54075_180905_221350.subreads.bam  m54075_180905_221350.subreadset.xml  m54075_180905_225130.ccs.bam  m54075_180905_225130.ccs.bam.pbi  m54075_180905_225130.consensusreadset.xml  m54075_180905_225130.subreads.bam  m54075_180905_225130.subreadset.xml  m54075_180905_233034.ccs.bam  m54075_180905_233034.ccs.bam.pbi  m54075_180905_233034.consensusreadset.xml  m54075_180905_233034.subreads.bam  m54075_180905_233034.subreadset.xml  m84011_220902_175841_s1.zmw58919191.fwd.hifi_reads.bam  m84011_220902_175841_s1.zmw58919191.rev.hifi_reads.bam  median.bam  median.ccs.bam  (+24 more)
tests/unit/: MM2Test.cpp  TestData.h.in  meson.build
tools/: check-formatting  format-all
tools/Darwin/: clang-format
tools/Linux/: clang-format
tools/lib/: libgcc_s.so.1  libstdc++.so.6  libstdc++.so.6.0.22
