# headers
if not meson.is_subproject()
  # pbmm2/
  install_headers(
    files([
      'pbmm2/AlignmentMode.h',
      'pbmm2/LibraryInfo.h',
      'pbmm2/MM2Helper.h',
      'pbmm2/MM2Settings.h',
      'pbmm2/Pbmm2Version.h']),
    subdir : 'pbmm2')
endif

pbmm2_include_directories = include_directories(['.'])
